--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <header role="banner">
       <h1>Comp 484</h1>
       <h2>Introduction to HTML</h2>
+
       <nav role="navigation">
-        <ul>
-          <li>Introduction to HTML</li>
-          <li>HTML syntax</li>
-          <li>Structuring pages</li>
-          <li>Creating links</li>
-          <li>HTML reference</li>
-          <li>Next steps</li>
-        </ul>
+      <ul>
+      <li><a href="index.html">Introduction to HTML</a></li>
+      <li><a href="syntax.html">HTML syntax</a></li>
+      <li><a href="structure.html">Structuring pages</a></li>
+      <li><a href="links.html">Creating links</a></li>
+      <li><a href="reference.html">HTML reference</a></li>
+      <li><a href="next.html">Next steps</a></li>
+      </ul>
       </nav>
+    
     </header>
     <main role="main">
       <article role="article">
@@ -168,11 +170,25 @@
         </section>
       </article>
     </main>
-    <footer role="contentinfo">
-      <p>
-        <a href="http://www.csun.edu" title="csun.edu" target="_blank">CSUN</a>
-        18111 Nordhoff St Northridge, CA 91330
-      </p>
-    </footer>
+  <footer role="contentinfo">
+  <p>
+    <a href="https://www.csun.edu" 
+       title="Visit California State University, Northridge website" 
+       target="_blank">
+       California State University, Northridge
+    </a>
+    18111 Nordhoff St Northridge, CA 91330
+  </p>
+
+  <p>
+    <a href="https://twitter.com/csunorthridge" 
+       title="Follow CSUN on Twitter" 
+       target="_blank">
+       Follow us on Twitter
+    </a>
+  </p>
+</footer>
+
+
   </body>
 </html>
