--- a/reference.html
+++ b/reference.html
@@ -9,24 +9,25 @@
     <header role="banner">
       <h1>Comp 484</h1>
       <h2>HTML Reference</h2>
-      <nav role="navigation">
-        <ul>
-          <li>Introduction to HTML</li>
-          <li>HTML syntax</li>
-          <li>Structuring pages</li>
-          <li>Creating links</li>
-          <li>HTML reference</li>
-          <li>Next steps</li>
-        </ul>
+       <nav role="navigation">
+      <ul>
+      <li><a href="index.html">Introduction to HTML</a></li>
+      <li><a href="syntax.html">HTML syntax</a></li>
+      <li><a href="structure.html">Structuring pages</a></li>
+      <li><a href="links.html">Creating links</a></li>
+      <li><a href="reference.html">HTML reference</a></li>
+      <li><a href="next.html">Next steps</a></li>
+      </ul>
       </nav>
     </header>
     <main role="main">
       <article role="article">
         <header>
           <p>
-            On this page you&rsquo;ll find a quick reference to common HTML
-            terms and a table of frequently used named character entities.
-          </p>
+  On this page you&rsquo;ll find a quick reference to common HTML
+  terms and a table of frequently used
+  <a href="#named" title="Jump to the named character entities table">named character entities</a>.
+</p>
         </header>
         <section>
           <h3>HTML Terms</h3>
@@ -166,7 +167,7 @@
             summary="A quick reference of named character entities, including an example of the character, a description, and the entity code."
           >
             <caption>
-              <h3>Common Named Character Entities</h3>
+              <h3 id="named">Common Named Character Entities</h3>
             </caption>
             <tr>
               <th scope="col">Character</th>
