--- a/next.html
+++ b/next.html
@@ -9,15 +9,15 @@
     <header role="banner">
       <h1>Comp 484</h1>
       <h2>Next Steps</h2>
-      <nav role="navigation">
-        <ul>
-          <li>Introduction to HTML</li>
-          <li>HTML syntax</li>
-          <li>Structuring pages</li>
-          <li>Creating links</li>
-          <li>HTML reference</li>
-          <li>Next steps</li>
-        </ul>
+       <nav role="navigation">
+      <ul>
+      <li><a href="index.html">Introduction to HTML</a></li>
+      <li><a href="syntax.html">HTML syntax</a></li>
+      <li><a href="structure.html">Structuring pages</a></li>
+      <li><a href="links.html">Creating links</a></li>
+      <li><a href="reference.html">HTML reference</a></li>
+      <li><a href="next.html">Next steps</a></li>
+      </ul>
       </nav>
     </header>
     <main role="main">
