--- a/syntax.html
+++ b/syntax.html
@@ -10,14 +10,14 @@
       <h1>Comp 484</h1>
       <h2>HTML Syntax</h2>
       <nav role="navigation">
-        <ul>
-          <li>Introduction to HTML</li>
-          <li>HTML syntax</li>
-          <li>Structuring pages</li>
-          <li>Creating links</li>
-          <li>HTML reference</li>
-          <li>Next steps</li>
-        </ul>
+      <ul>
+      <li><a href="index.html">Introduction to HTML</a></li>
+      <li><a href="syntax.html">HTML syntax</a></li>
+      <li><a href="structure.html">Structuring pages</a></li>
+      <li><a href="links.html">Creating links</a></li>
+      <li><a href="reference.html">HTML reference</a></li>
+      <li><a href="next.html">Next steps</a></li>
+      </ul>
       </nav>
     </header>
     <main role="main">
@@ -213,8 +213,8 @@
             anywhere outside of a tag could cause parsing errors in browsers.
             However, you can still use these reserved characters and other
             special characters or symbols by using what is known as a
-            <strong>named character entity</strong>. These special codes tell
-            the user agent to replace the entity code with a specific character.
+            <strong><a href="reference.html#named">named character entity</a></strong>. 
+            These special codes tell the user agent to replace the entity code with a specific character.
             These entities begin with an ampersand (&amp;) followed by the
             entity name and end with a semicolon (;). To display an ampersand,
             for example, you would type <strong>&amp;amp;</strong> in place of
@@ -229,6 +229,7 @@
               >Wikipedia</a
             >.
           </p>
+    
         </section>
       </article>
     </main>
