Added Footer for all pages

--- a/links.html
+++ b/links.html
@@ -168,7 +168,22 @@
       </article>
     </main>
     <footer role="contentinfo">
-      <p>CSUN 18111 Nordhoff St Northridge, CA 91330</p>
-    </footer>
+  <p>
+    <a href="https://www.csun.edu" 
+       title="Visit California State University, Northridge website" 
+       target="_blank">
+       California State University, Northridge
+    </a>
+    18111 Nordhoff St Northridge, CA 91330
+  </p>
+
+  <p>
+    <a href="https://twitter.com/csunorthridge" 
+       title="Follow CSUN on Twitter" 
+       target="_blank">
+       Follow us on Twitter
+    </a>
+  </p>
+</footer>
   </body>
 </html>
