--- a/syntax.html
+++ b/syntax.html
@@ -233,11 +233,23 @@
         </section>
       </article>
     </main>
-    <footer role="contentinfo">
-      <p>
-        <a href="http://www.csun.edu" title="csun.edu" target="_blank">CSUN</a>
-        18111 Nordhoff St Northridge, CA 91330
-      </p>
-    </footer>
+   <footer role="contentinfo">
+  <p>
+    <a href="https://www.csun.edu" 
+       title="Visit California State University, Northridge website" 
+       target="_blank">
+       California State University, Northridge
+    </a>
+    18111 Nordhoff St Northridge, CA 91330
+  </p>
+
+  <p>
+    <a href="https://twitter.com/csunorthridge" 
+       title="Follow CSUN on Twitter" 
+       target="_blank">
+       Follow us on Twitter
+    </a>
+  </p>
+</footer>
   </body>
 </html>
